# biobambam2

./: .gitignore  AUTHORS  COPYING  Makefile.am  Makefile.in  README  README.md  aclocal.m4  bumplibmausversion.sh  bumpversion.sh  configure  configure.ac  configure.in  merge.sh  release.sh
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
debian/: changelog  control  copyright  rules
src/: Makefile.am  Makefile.in
src/bambam/: BamFile.hpp  Licensing.cpp  Licensing.hpp  OutputBuffer.hpp  PutFastQBase.hpp  bamToFastQ.cpp  bamToFastQ.hpp
src/biobambam/: AttachRank.cpp  AttachRank.hpp  BamBamConfig.hpp  BamBamConfig.hpp.in  BamFile.hpp  ClipAdapters.cpp  ClipAdapters.hpp  ClipReinsert.cpp  ClipReinsert.hpp  KmerPoisson.cpp  KmerPoisson.hpp  KmerProb.cpp  KmerProb.hpp  Licensing.cpp  Licensing.hpp  OutputBuffer.hpp  PutFastQBase.hpp  ResetAlignment.cpp  ResetAlignment.hpp  Split12.cpp  Split12.hpp  Strip12.cpp  Strip12.hpp  bamToFastQ.cpp  bamToFastQ.hpp  zzToName.cpp  zzToName.hpp
src/biobambam2/: AttachRank.cpp  AttachRank.hpp  BamBamConfig.hpp.in  ClipAdapters.cpp  ClipAdapters.hpp  ClipReinsert.cpp  ClipReinsert.hpp  KmerPoisson.cpp  KmerPoisson.hpp  Licensing.cpp  Licensing.hpp  ResetAlignment.cpp  ResetAlignment.hpp  Split12.cpp  Strip12.cpp  zzToName.cpp  zzToName.hpp
src/programs/: bam12auxmerge.1  bam12auxmerge.cpp  bam12split.1  bam12split.cpp  bam12strip.1  bam12strip.cpp  bamadapterclip.1  bamadapterclip.cpp  bamadapterfind.1  bamadapterfind.cpp  bamalignfrac.cpp  bamalignmentoffsets.cpp  bamauxmerge.cpp  bamauxsort.1  bamauxsort.cpp  bamcat.1  bamcat.cpp  bamcheckalignments.cpp  bamchecksort.1  bamchecksort.cpp  bamclipextract.cpp  bamclipreinsert.1  bamclipreinsert.cpp  bamcollate.1  bamcollate.cpp  bamcollate2.1  bamcollate2.cpp  bamdisthist.cpp  bamdownsamplerandom.1  bamdownsamplerandom.cpp  bamexplode.cpp  bamfillquery.1  bamfillquery.cpp  bamfilter.cpp  bamfilteraux.1  bamfilteraux.cpp  bamfilterflags.1  bamfilterflags.cpp  bamfilterheader.1  bamfilterheader.cpp  (+89 more)
test/: Makefile.am  Makefile.in  bamcmp.cpp  bamtosam.cpp  dupsingle.sh  dupsinglemarked.sh  dupsinglemarkedsortedqreset.sh  precollated.fq  sorttestshort.bam  sorttestshort.sam  sorttestshort.sh  testdupsingle.sh  testdupsinglemarkedsortedqreset.sh  testfastqbamloop.sh  testshortsort.sh  testshortsortcoordinate.sh  testshortsortqueryname.sh
